--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi",
+  "name": "accounting_strapi_backend",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -30,8 +30,8 @@
     "uuid": "40758115-209b-4f25-93a3-b05b5467c08e"
   },
   "engines": {
-    "node": "=18.0.0 <=20.x.x",
-    "npm": "=6.0.0"
+    "node": ">=18.0.0 <=20.x.x",
+    "npm": ">=6.0.0"
   },
   "license": "MIT"
 }
