--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-faux-dom": "^4.5.0",
     "react-router-dom": "5.3.4",
     "strapi-plugin-cookie-manager": "^1.2.2",
     "styled-components": "5.3.3"
