--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/strapi": "4.16.2",
     "d3": "^7.9.0",
     "mysql": "2.18.1",
+    "pg-connection-string": "^2.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-faux-dom": "^4.5.0",
