correct mysql config

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@strapi/strapi": "4.16.2",
     "d3": "^7.9.0",
     "mysql": "2.18.1",
+    "pg": "^8.11.5",
     "pg-connection-string": "^2.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-faux-dom": "^4.5.0",
     "react-router-dom": "5.3.4",
     "strapi-plugin-cookie-manager": "^1.2.2",
     "styled-components": "5.3.3"
@@ -33,7 +33,7 @@
     "uuid": "40758115-209b-4f25-93a3-b05b5467c08e"
   },
   "engines": {
-    "node": "=18.0.0 <=20.x.x",
+    "node": "16.0.0",
     "npm": "=6.0.0"
   },
   "license": "MIT"
